--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
                         </li>
 
                         <li {{ app.request.get('_route') == 'cardtemplate' ? 'class="nav-item active"' : 'class="nav-item"'}}>
-                            <a class="nav-link disabled" href="{{ path('cardtemplate') }}">Card template</a>
+                            <a class="nav-link disabled" href="{{ path('template') }}">Card template</a>
                         </li>
                     </ul>
                 </div>
